--- a/TextRecognitionWithCameraX/app/src/main/res/values/strings.xml
+++ b/TextRecognitionWithCameraX/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Text Recogniionm</string>
+    <string name="app_name">TextRecognition With Graphic Overlay</string>
 </resources>
